--- a/CancerGov/_src/StyleSheets/_videos.scss
+++ b/CancerGov/_src/StyleSheets/_videos.scss
@@ -95,11 +95,3 @@ h3.video100title {
 /* End Video Alignment */
 /*** END Video Player ***/
 
-.public-use {
-	padding: 0;
-	margin:30px 0;
-	border-top:#4d4d4d thin solid;
-	font-style:italic;
-	clear: both;
-}
-
